FIX: Fix buttons alignment on edit_recipes.html and edit_categories.html for mobile view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -592,7 +592,7 @@ div strong {
     line-height: 3rem;
     font-size: 1.125rem;
     font-weight: 500;
-    margin: 0px 12px;
+    margin: 0px 10px;
     background-color: #244846;
     color: #fff;
     border: none;
@@ -613,7 +613,7 @@ div strong {
     line-height: 3rem;
     font-size: 1.125rem;
     font-weight: 500;
-    margin: 0px 12px;
+    margin: 0px 10px;
     background-color: #888;
     color: #fff;
     border: none;
